Made changes to allow reasoning

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 
 deduplicated_dataset.json
+checkpoint_best/model-00004-of-00004.safetensors
+/checkpoint_best
+/wandb
+/offline_ckpt
+/wandb
+wandb/debug.log
+/wandb
