--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,17 @@
 
-*.jsonl
 *.json
-checkpoint_best/model-00004-of-00004.safetensors
-/checkpoint_best
+*.safetensors
+*.md
+*.pt
+*.pth
+*.bin
+*.pyc
+*.py
+*.log
+*.txt
+*.wandb
+*.jsonl
+/Unused
 /wandb
-/offline_ckpt
-/wandb
-wandb/debug.log
-/wandb
-OvO-R1/
-*.csv
-*.csv
-train.jsonl
-/ProofAug
-/lora_model
-/outputs
 Keys
+/ProofAug
