--- a/requirements.txt
+++ b/requirements.txt
@@ -64,14 +64,14 @@ contourpy==1.3.1
 cramjam==2.9.1
 cryptography==43.0.3
 cuda-python==12.6.0
-cudf-cu12 @ https://pypi.nvidia.com/cudf-cu12/cudf_cu12-24.12.0-cp311-cp311-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl
+#cudf-cu12 @ https://pypi.nvidia.com/cudf-cu12/cudf_cu12-24.12.0-cp311-cp311-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl
 cufflinks==0.17.3
 cupy-cuda12x==13.3.0
 cut-cross-entropy==25.1.1
 cvxopt==1.3.2
 cvxpy==1.6.0
 cycler==0.12.1
-cyipopt==1.5.0
+#cyipopt==1.5.0
 cymem==2.0.11
 Cython==3.0.12
 dask==2024.10.0
@@ -129,7 +129,7 @@ fsspec==2024.10.0
 future==1.0.0
 gast==0.6.0
 gcsfs==2024.10.0
-GDAL==3.6.4
+#GDAL==3.6.4
 gdown==5.2.0
 geemap==0.35.1
 gensim==4.3.3
@@ -166,7 +166,7 @@ google-cloud-resource-manager==1.14.0
 google-cloud-spanner==3.51.0
 google-cloud-storage==2.19.0
 google-cloud-translate==3.19.0
-google-colab @ file:///colabtools/dist/google_colab-1.0.0.tar.gz
+#google-colab @ file:///colabtools/dist/google_colab-1.0.0.tar.gz
 google-crc32c==1.6.0
 google-genai==0.8.0
 google-generativeai==0.8.4
@@ -402,9 +402,9 @@ prompt_toolkit==3.0.50
 propcache==0.2.1
 prophet==1.1.6
 proto-plus==1.26.0
-protobuf==3.20.3
+protobuf
 psutil==5.9.5
-psycopg2==2.9.10
+#psycopg2==2.9.10
 ptyprocess==0.7.0
 py-cpuinfo==9.0.0
 py4j==0.10.9.7
@@ -426,7 +426,7 @@ pyerfa==2.0.1.5
 pygame==2.6.1
 pygit2==1.17.0
 Pygments==2.18.0
-PyGObject==3.42.1
+#PyGObject==3.42.1
 PyJWT==2.10.1
 pylibcudf-cu12 @ https://pypi.nvidia.com/pylibcudf-cu12/pylibcudf_cu12-24.12.0-cp311-cp311-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl
 pylibcugraph-cu12==24.12.0
@@ -471,8 +471,8 @@ requirements-parser==0.9.0
 rich==13.9.4
 rich-toolkit==0.13.2
 rmm-cu12==24.12.1
-rpds-py==0.22.3
-rpy2==3.4.2
+#rpds-py==0.22.3
+#rpy2==3.4.2
 rsa==4.9
 safetensors==0.5.2
 scikit-image==0.25.2
